--- a/r/ro/roc/rocket.chat.html
+++ b/r/ro/roc/rocket.chat.html
@@ -1,15 +1,19 @@
-<!--The following is the downloaded HTML source of the rocket.chat privacy policy that was archived on 2018-09-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180929062112id_/https%3A//rocket.chat/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rocket.chat privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607015517id_/https%3A//rocket.chat/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
   <title>Rocket.Chat - Rocket.Chat Privacy Policy</title>
 	<meta name="description" content="Rocket.Chat is the leading open source team chat software solution. Free, unlimited and completely customizable with on-premises and SaaS cloud hosting.">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <link rel="preconnect" href="https://www.googletagmanager.com">
+  <link rel="preconnect" href="https://code.jquery.com/">
   <link rel="canonical" href="https://rocket.chat/privacy">
   <link rel="alternate" type="application/rss+xml" title="Free, Open Source, Enterprise Team Chat" href="/feed.xml">
   <link rel="shortcut icon" href="/favicon.ico?v=1">
-  <link rel="stylesheet" href="/styles.css?v=52">
+  <link rel="stylesheet" href="/styles.css?v=134">
+
+  
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@RocketChat">
@@ -17,25 +21,40 @@
   <meta name="twitter:description" content="Rocket.Chat is the leading open source team chat software solution. Free, unlimited and completely customizable with on-premises and SaaS cloud hosting.">
   <meta name="twitter:image" content="https://rocket.chat/images/blog/post.jpg">
   <meta name="twitter:image:alt" content="Rocket.Chat - Rocket.Chat Privacy Policy">
+  <meta name="apple-itunes-app" content="app-id=1148741252">
+
 
   
   <meta property="og:image" content="https://rocket.chat/images/blog/post.jpg">
   
 
-   <!-- Start Alexa Certify Javascript -->
- <script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MLJ76N"></script><script type="text/javascript" async="" src="https://certify-js.alexametrics.com/atrk.js"></script><script type="text/javascript">
-_atrk_opts = { atrk_acct:"L21tr1rcy520uW", domain:"rocket.chat",dynamic: true};
-(function() { var as = document.createElement('script'); as.type = 'text/javascript'; as.async = true; as.src = "https://certify-js.alexametrics.com/atrk.js"; var s = document.getElementsByTagName('script')[0];s.parentNode.insertBefore(as, s); })();
-</script>
-<noscript><img src="https://certify.alexametrics.com/atrk.gif?account=L21tr1rcy520uW" style="display:none" height="1" width="1" alt="" /></noscript>
-<!-- End Alexa Certify Javascript -->
-
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-MLJ76N');</script>
+  
+<!-- Google Tag Manager -->
+<script async="" src="https://rocketchatsales.rocket.chat/livechat/1.0.0/rocketchat-livechat.min.js?_=201903270000"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MLJ76N"></script><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-MLJ76N');</script>
 <!-- End Google Tag Manager -->
-</head>
+
+<!-- Facebook Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '487227908144432');
+    fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=487227908144432&ev=PageView&noscript=1"
+/></noscript>
+  <!-- End Facebook Pixel Code -->
+
+
+<script async="" src="https://static.hotjar.com/c/hotjar-1234561.js?sv=6"></script></head>
 <body class="legal light en/legal">
-<!-- Start of AgileCRM webrules Script -->
+  <!-- Start of AgileCRM webrules Script -->
 <script id="_agile_min_js" async="" type="text/javascript" src="https://rocketchat.agilecrm.com/stats/min/agile-min.js"> </script>
 <script type="text/javascript">
 	var Agile_API = Agile_API || {}; Agile_API.on_after_load = function() {
@@ -46,11 +65,22 @@ _atrk_opts = { atrk_acct:"L21tr1rcy520uW", domain:"rocket.chat",dynamic: true};
 </script>
 <!-- End of AgileCRM webrules Script -->
 
+  <!-- Start of Rocket.Chat Livechat Script -->
+<script type="text/javascript">
+ 	(function(w, d, s, u) {
+		w.RocketChat = function(c) { w.RocketChat._.push(c) }; w.RocketChat._ = []; w.RocketChat.url = u;
+		var h = d.getElementsByTagName(s)[0], j = d.createElement(s);
+		j.async = true; j.src = 'https://rocketchatsales.rocket.chat/livechat/1.0.0/rocketchat-livechat.min.js?_=201903270000';
+		h.parentNode.insertBefore(j, h);
+	})(window, document, 'script', 'https://rocketchatsales.rocket.chat/livechat?version=1.0.0');
+ </script>
+ <!-- End of Rocket.Chat Livechat Script -->
 
-<!-- Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MLJ76N" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
-<div class="app-header app-header--light">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <div class="app-header app-header--light">
   <header class="app-header_wrap headroom--top">
     <div class="container">
       <h1 class="app-header_logo">
@@ -66,13 +96,24 @@ _atrk_opts = { atrk_acct:"L21tr1rcy520uW", domain:"rocket.chat",dynamic: true};
       <nav class="app-header_menu">
         <ul>
           <li><a href="/install">Install</a></li>
+
+          <li class="solutions">
+            Solutions
+            <ul class="dropdown">
+              <li><a class="" href="/devops">Devops</a></li>
+              <li><a class="" href="/customer-solutions">Customer Solutions</a></li>
+              <li><a class="" href="/team-collab">Team Collaboration</a></li>
+              <li><a class="" href="/security">Security</a></li>
+            </ul>
+          </li>
+
           <li><a href="/pricing">Pricing</a></li>
           <li><a href="/community">Community</a></li>
-          <li><a href="/docs">Docs</a></li>
+          <li><a href="/docs/">Docs</a></li>
           <li><a href="/blog/">Blog</a></li>
           <li><a href="/contact">Contact</a></li>
         </ul>
-        <a class="app-header_install" href="/pricing"><span><img src="/images/default/cloud.svg" alt="Install"></span> Try now</a>
+        <a id="try-now" class="app-header_install" href="//cloud.rocket.chat/trial/bronze"><span><img src="/images/default/cloud.svg" alt="Install"></span> Try now</a>
       </nav>
 
     </div>
@@ -394,6 +435,8 @@ visit.</p>
       <ul class="app-footer_nav">
         <li><a href="/">Rocket.Chat</a></li>
         <li><a href="/pricing">Pricing</a></li>
+        <li><a href="/devops">DevOps</a></li>
+        <li><a href="/customer-solutions">Customer Solutions</a></li>
         <li><a href="/bots">Bots</a></li>
         <li><a href="/community">Community</a></li>
         <li><a href="/webinars">Webinars</a></li>
@@ -430,7 +473,7 @@ visit.</p>
       <input id="menu4" type="checkbox">
       <label for="menu4" class="app-footer_pre-menu">Get started</label>
       <ul class="app-footer_nav">
-        <li><a class="app-footer_install" target="_blank" rel="noopener noreferrer" href="//rocket.chat/pricing"><span><img src="/images/default/cloud.svg" alt="Free trial"></span> Cloud trial</a></li>
+        <li><a class="app-footer_install" target="_blank" rel="noopener noreferrer" href="//cloud.rocket.chat/trial/bronze"><span><img src="/images/default/cloud.svg" alt="Free trial"></span> Cloud trial</a></li>
         <li><a class="app-footer_install" href="/install" title="install"><span style="margin-top: -0.1em;"><img src="/images/default/install.svg" alt="Install" style="margin-top: 0.35em"></span> Install server</a></li>
       </ul>
     </div>
@@ -452,7 +495,6 @@ visit.</p>
           <a href="https://www.facebook.com/RocketChatApp/" target="_blank" rel="noopener noreferrer"><img src="/images/social/facebook.svg" alt="facebook"></a>
           <a href="https://www.linkedin.com/company/rocket-chat" target="_blank" rel="noopener noreferrer"><img src="/images/social/linkedin.svg" alt="linkedin"></a>
           <a href="https://www.youtube.com/channel/UCin9nv7mUjoqrRiwrzS5UVQ" target="_blank" rel="noopener noreferrer"><img src="/images/social/youtube.svg" alt="youtube"></a>
-          <a href="https://plus.google.com/+RocketChatApp" target="_blank" rel="noopener noreferrer"><img src="/images/social/google-plus.svg" alt="google-plus"></a>
         </div>
       </div>
       <div class="github-buttons-wrapper">
@@ -480,13 +522,27 @@ visit.</p>
   </div>
 </footer>
 
-<script src="/jquery.js"></script>
+
 <script src="/main.js"></script>
 <script src="/redirect.js"></script>
+
+
+<script>
+  (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:1234561,hjsv:6};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
+
+
 <!--[if IE]>
   <script src="/polyfill/modernizr.js"></script>
   <script src="/polyfill/respond.min.js"></script>
-  <script src="/polyfill/calc.min.min.js"></script>
+  <script src="/polyfill/calc.min.js"></script>
 <![endif]-->
 
 
