--- a/d/de/dex/dextronet.com.html
+++ b/d/de/dex/dextronet.com.html
@@ -1,16 +1,16 @@
-<!--The following is the downloaded HTML source of the dextronet.com privacy policy that was archived on 2018-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181206230754id_/http%3A//www.dextronet.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dextronet.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607191007id_/http%3A//www.dextronet.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <link href="https://plus.google.com/104948936308713874715" rel="publisher">
   <meta content="authenticity_token" name="csrf-param">
-<meta content="4frTHyEWat5KDGALr34piSMPWP2pkO09B9Ml5Tc5kco=" name="csrf-token">
+<meta content="rsxbNqNBUgyA625Z6ybOGhhVQzWif0aMFbh0j40Axt4=" name="csrf-token">
   <meta charset="utf-8">
 <meta name="keywords" content="privacy policy">
 <meta name="description" content="Dextronet Privacy Policy - we 100% respect your privacy.">
 <meta name="author" content="Dextronet">
 <meta http-equiv="Title" content="Dextronet Privacy Policy">
-<meta name="copyright" content="(c) 2018 Dextronet">
+<meta name="copyright" content="(c) 2019 Dextronet">
 <meta name="distribution" content="Global">
 <meta name="rating" content="General">
 <meta http-equiv="Content-Language" content="en">
@@ -69,7 +69,7 @@ var t = {"antispam":"capek-rulz","download_in_progress":"Your download should be
   <div class="google-plus"><g:plusone size="medium" count="false" href="http://www.dextronet.com"></g:plusone></div>
   <ul class="main-navigation">
       <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-        <li class="with-dropdown nav-item"><a href="/swift-to-do-list-software" class="nav-link">Swift To-Do List 10<span class="dropdown-arrow-ct"><span class="dropdown-arrow"></span></span></a><div class="dropdown dropdown-stdl" style="display: none;width: 460px;"><div class="outer"><div class="inner">      <p class="phrase">The #1 to-do list software for Windows. 
+        <li class="with-dropdown nav-item"><a href="/swift-to-do-list-software" class="nav-link">Swift To-Do List 11<span class="dropdown-arrow-ct"><span class="dropdown-arrow"></span></span></a><div class="dropdown dropdown-stdl" style="display: none;width: 460px;"><div class="outer"><div class="inner">      <p class="phrase">The #1 to-do list software for Windows. 
 <br>
 Being organized feels great and it has never been so easy!</p>
       <a href="/swift-to-do-list-software" class="screenshot nozoom" title="Swift To-Do List 10 - Main Window"><img alt="Swift To-Do List, the best task management software for Windows" src="http://s.dxnimg.com/screenshots/1/swift-to-do-list-10-main_thumb_small.png?1474313069"></a>
@@ -87,7 +87,7 @@ Being organized feels great and it has never been so easy!</p>
       </div>
 </div></div></div></li>
         <li class="with-dropdown nav-item"><a href="/software" class="nav-link">Software<span class="dropdown-arrow-ct"><span class="dropdown-arrow"></span></span></a><div class="dropdown dropdown-products" style="display: none;width: 480px;"><div class="outer"><div class="inner">      <div class="featured">
-        <div class="heading"><a href="/swift-to-do-list-software"><img alt="Swift To-Do List 10" src="http://s.dxnimg.com/icons/swift-to-do-list-32.png?1280539301"></a><a href="/swift-to-do-list-software">Swift To-Do List 10</a></div>
+        <div class="heading"><a href="/swift-to-do-list-software"><img alt="Swift To-Do List 11" src="http://s.dxnimg.com/icons/swift-to-do-list-32.png?1280539301"></a><a href="/swift-to-do-list-software">Swift To-Do List 11</a></div>
         <p>The #1 task management software for Windows.</p>
         <p><strong><a href="/swifttodolist.exe" class="subscribe-on-download-stdl download-link" data-product="swift-to-do-list" data-targetable="software_dropdown-download-link">Download</a></strong> | 
           <a href="/buy/swift-to-do-list" data-targetable="software_dropdown-buy-link">Buy Now</a></p>
@@ -129,7 +129,7 @@ Being organized feels great and it has never been so easy!</p>
     </div>
 </div></div></div></li>
       <li class="with-dropdown nav-item"><a href="/buy" class="nav-link" data-targetable="main_menu-buy-link">Buy<span class="dropdown-arrow-ct"><span class="dropdown-arrow"></span></span></a><div class="dropdown dropdown-submenu" style="display: none"><div class="outer"><div class="inner">    <div class="products">
-      <a href="/buy/swift-to-do-list" class="featured-item" data-targetable="buy_dropdown-swift-to-do-list-link"><img alt="Swift To-Do List 10" src="http://s.dxnimg.com/icons/swift-to-do-list-24.png?1280539295">Swift To-Do List 10</a>
+      <a href="/buy/swift-to-do-list" class="featured-item" data-targetable="buy_dropdown-swift-to-do-list-link"><img alt="Swift To-Do List 11" src="http://s.dxnimg.com/icons/swift-to-do-list-24.png?1280539295">Swift To-Do List 11</a>
       <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=1830%2F11&amp;CLR=0&amp;PRODUCTID=18300122&amp;QUANTITY=1" data-targetable="buy_dropdown-swift-mind-freedom-link"><img alt="Swift Mind Freedom" src="http://s.dxnimg.com/icons/swift-mind-freedom-24.png?1355506658">Swift Mind Freedom</a>
       <a href="https://secure.bmtmicro.com/servlets/Orders.ShoppingCart?CID=1830%2F11&amp;CLR=0&amp;PRODUCTID=18300163&amp;QUANTITY=1" data-targetable="buy_dropdown-meta-productivity-link"><img alt="Meta Productivity" src="http://s.dxnimg.com/icons/meta-productivity-24.png?1425926353">Meta Productivity</a>
       <a href="/buy/fastpaste" data-targetable="buy_dropdown-fastpaste-link"><img alt="FastPaste" src="http://s.dxnimg.com/icons/fastpaste-24.png?1280539300">FastPaste</a>
@@ -223,7 +223,7 @@ Czech Republic</p>
   <div class="footer-cnt">
       <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/swift-to-do-list-software">Swift To-Do List 10</a></li>
+        <li><a href="/swift-to-do-list-software">Swift To-Do List 11</a></li>
         <li><a href="/software">Software</a></li>
         <li><a href="/buy">Buy</a></li>
         <li><a href="/support">Support</a></li>
@@ -240,14 +240,14 @@ Czech Republic</p>
         <a href="/sitemap" class="sitemap">Sitemap</a> <span>|</span>
         <a href="http://www.componentowl.com" class="cowl">.NET List View Control</a>
       </div>
-    © 2018 Dextronet. All rights reserved. Read our <a href="/disclaimer">Disclaimer</a>, <a href="/privacy-policy">Privacy Policy</a>, <a href="/software-eula">Software EULA</a> and <a href="/uninstall-instructions">Uninstall Instructions</a>.
+    © 2019 Dextronet. All rights reserved. Read our <a href="/disclaimer">Disclaimer</a>, <a href="/privacy-policy">Privacy Policy</a>, <a href="/software-eula">Software EULA</a>, <a href="/cloud-sync-data-protection">Cloud Sync Data Protection Statement</a> and <a href="/uninstall-instructions">Uninstall Instructions</a>.
   </div>
 </div>
   
   <div class="preload">
   <img alt="Loader" src="http://s.dxnimg.com/loader-3a92a4f635b546edfeee5e3a4e3df08d.gif">
-  <img alt="Swift To-Do List 10" src="http://s.dxnimg.com/icons/swift-to-do-list-32.png?1280539301">
-  <img alt="Swift To-Do List 10" src="http://s.dxnimg.com/icons/swift-to-do-list-48.png?1280539306">
+  <img alt="Swift To-Do List 11" src="http://s.dxnimg.com/icons/swift-to-do-list-32.png?1280539301">
+  <img alt="Swift To-Do List 11" src="http://s.dxnimg.com/icons/swift-to-do-list-48.png?1280539306">
 </div>
 
   <script src="http://s.dxnimg.com/easyxdm/easyXDM.min.js" type="text/javascript"></script>
