--- a/d/dm/dml/dmlp.org.html
+++ b/d/dm/dml/dmlp.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the dmlp.org privacy policy that was archived on 2018-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181226153041id_/http%3A//www.dmlp.org/privacy-notice) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dmlp.org privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608075910id_/http%3A//www.dmlp.org/privacy-notice) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" dir="ltr"><!--<![endif]--><head>
 <meta charset="utf-8">
@@ -37,7 +37,7 @@
 <script src="https://www.dmlp.org/misc/jquery.once.js?v=1.2"></script>
 <script src="https://www.dmlp.org/misc/drupal.js?p8kt8w"></script>
 <script src="https://www.dmlp.org/sites/dmlp.org/themes/digital_media_law/scripts/script.js?p8kt8w"></script>
-<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"digital_media_law","theme_token":"NQAzUNsPmRxbSlO0a-ngp75nAyviWlxyp16Fs9RZUk4","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/dmlp.org\/themes\/digital_media_law\/scripts\/script.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/dmlp.org\/modules\/simplenews\/simplenews.css":1,"modules\/aggregator\/aggregator.css":1,"modules\/book\/book.css":1,"modules\/comment\/comment.css":1,"modules\/date\/date_api\/date.css":1,"modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/date\/date_repeat_field\/date_repeat_field.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/poll\/poll.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"modules\/forum\/forum.css":1,"sites\/dmlp.org\/modules\/views\/css\/views.css":1,"modules\/ckeditor\/ckeditor.css":1,"sites\/dmlp.org\/modules\/ctools\/css\/ctools.css":1,"sites\/dmlp.org\/modules\/print\/css\/printlinks.css":1,"sites\/all\/themes\/adaptivetheme\/at_core\/css\/at.layout.css":1,"sites\/dmlp.org\/themes\/digital_media_law\/css\/global.base.css":1,"sites\/dmlp.org\/themes\/digital_media_law\/css\/global.styles.css":1,"public:\/\/adaptivetheme\/digital_media_law_files\/digital_media_law.default.layout.css":1}}});</script>
+<script>jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":{"theme":"digital_media_law","theme_token":"XNd0n9jFDYzIXcuqshlD55Dzo5uDLhkskNHAxxH6AMA","js":{"misc\/jquery.js":1,"misc\/jquery.once.js":1,"misc\/drupal.js":1,"sites\/dmlp.org\/themes\/digital_media_law\/scripts\/script.js":1},"css":{"modules\/system\/system.base.css":1,"modules\/system\/system.menus.css":1,"modules\/system\/system.messages.css":1,"modules\/system\/system.theme.css":1,"sites\/dmlp.org\/modules\/simplenews\/simplenews.css":1,"modules\/aggregator\/aggregator.css":1,"modules\/book\/book.css":1,"modules\/comment\/comment.css":1,"modules\/date\/date_api\/date.css":1,"modules\/date\/date_popup\/themes\/datepicker.1.7.css":1,"modules\/date\/date_repeat_field\/date_repeat_field.css":1,"modules\/field\/theme\/field.css":1,"modules\/node\/node.css":1,"modules\/poll\/poll.css":1,"modules\/search\/search.css":1,"modules\/user\/user.css":1,"modules\/forum\/forum.css":1,"sites\/dmlp.org\/modules\/views\/css\/views.css":1,"modules\/ckeditor\/ckeditor.css":1,"sites\/dmlp.org\/modules\/ctools\/css\/ctools.css":1,"sites\/dmlp.org\/modules\/print\/css\/printlinks.css":1,"sites\/all\/themes\/adaptivetheme\/at_core\/css\/at.layout.css":1,"sites\/dmlp.org\/themes\/digital_media_law\/css\/global.base.css":1,"sites\/dmlp.org\/themes\/digital_media_law\/css\/global.styles.css":1,"public:\/\/adaptivetheme\/digital_media_law_files\/digital_media_law.default.layout.css":1}}});</script>
 <!--[if lt IE 9]>
 <script src="https://www.dmlp.org/sites/all/themes/adaptivetheme/at_core/scripts/html5.js?p8kt8w"></script>
 <![endif]-->
@@ -57,7 +57,7 @@ Welcome to the website of the Digital Media Law Project. The DMLP was a project 
   <div id="menu-bar" class="nav clearfix"><nav id="block-block-31" class="block block-block no-title menu-wrapper menu-bar-wrapper clearfix odd first block-count-1 block-region-menu-bar block-31">  
   
   <!--- A simple current date script -->
-December 26, 2018 
+June 8, 2019 
   </nav><nav id="block-menu-menu-primary-links2" class="block block-menu menu-wrapper menu-bar-wrapper clearfix even last block-count-2 block-region-menu-bar block-menu-primary-links2" role="navigation">  
       <h2 class="element-invisible block-title">Primary links</h2>
   
@@ -89,7 +89,7 @@ December 26, 2018
   <label class="element-invisible" for="edit-search-block-form--2">Search </label>
  <input title="Enter the terms you wish to search for." type="search" id="edit-search-block-form--2" name="search_block_form" value="" size="15" maxlength="128" class="form-text">
 </div>
-<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-l0L7yREGLfjmDw0gZhFNVYKHwvgkq38rwYnv_90DPvg">
+<div class="form-actions form-wrapper" id="edit-actions"><input type="submit" id="edit-submit" name="op" value="Search" class="form-submit"></div><input type="hidden" name="form_build_id" value="form-prlxD_y9CArW36Oi6f8j__I9q9lwc2TmOCUfXWgFOik">
 <input type="hidden" name="form_id" value="search_block_form">
 </div>
 </div></form></div>
@@ -210,41 +210,41 @@ Material on this website may link to independently run websites outside of the w
   <label for="edit-pass">Password <span class="form-required" title="This field is required.">*</span></label>
  <input type="password" id="edit-pass" name="pass" size="15" maxlength="128" class="form-text required">
 </div>
-<div class="item-list"><ul><li class="even first last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li></ul></div><input type="hidden" name="form_build_id" value="form-1_5dArik6U-60amy966lA32e7H3sQyvUv4FASp9U9Og">
+<div class="item-list"><ul><li class="even first last"><a href="/user/password" title="Request new password via e-mail.">Request new password</a></li></ul></div><input type="hidden" name="form_build_id" value="form-IdL1IQHHHBCZuT4d0IXYIk-Z9p6yjPdFj95UMqYEf8g">
 <input type="hidden" name="form_id" value="user_login_block">
 <div class="form-actions form-wrapper" id="edit-actions--2"><input type="submit" id="edit-submit--2" name="op" value="Log in" class="form-submit"></div></div></form></div>
   </div></div><section id="block-views-dmlp-tracker-block-1" class="block block-views even block-count-9 block-region-sidebar-second block-dmlp-tracker-block-1"><div class="block-inner clearfix">  
       <h2 class="block-title">Recent Blog Posts</h2>
   
-  <div class="block-content content"><div class="view view-dmlp-tracker view-id-dmlp_tracker view-display-id-block_1 view-dom-id-73781d99b1da22109faaf3351a4a6b26">
+  <div class="block-content content"><div class="view view-dmlp-tracker view-id-dmlp_tracker view-display-id-block_1 view-dom-id-e224337f545ccf61547a38ab8e5af7eb">
         
   
   
       <div class="view-content">
       <div class="item-list">    <ul>          <li class="views-row views-row-1 views-row-odd views-row-first">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/seven-years-serving-and-studying-legal-needs-digital-journalism">Seven Years of Serving and Studying the Legal Needs of Digital Journalism</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 6 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 11 months</em> ago</span>  </div></li>
           <li class="views-row views-row-2 views-row-even">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/dmlp-announcement-new-report-media-credentialing-united-states">DMLP Announcement: A New Report on Media Credentialing in the United States</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 6 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 5 days</em> ago</span>  </div></li>
           <li class="views-row views-row-3 views-row-odd">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/will-eu-courts-privacy-ruling-break-internet">Will E.U. Court's Privacy Ruling Break the Internet?</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 7 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 3 weeks</em> ago</span>  </div></li>
           <li class="views-row views-row-4 views-row-even">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/baidus-political-censorship-protected-first-amendment-raises-broader-issues">Baidu's Political Censorship is Protected by First Amendment, but Raises Broader Issues</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 8 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 1 month</em> ago</span>  </div></li>
           <li class="views-row views-row-5 views-row-odd">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/hear-ye-hear-ye-some-federal-courts-post-audio-recordings-online">Hear Ye, Hear Ye! Some Federal Courts Post Audio Recordings Online</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 8 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 1 month</em> ago</span>  </div></li>
           <li class="views-row views-row-6 views-row-even">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/service-and-research-frontier-media-law">Service and Research at the Frontier of Media Law</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 8 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 1 month</em> ago</span>  </div></li>
           <li class="views-row views-row-7 views-row-odd">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/dmlp-announcement-live-chat-session-tax-exempt-journalism-updated">DMLP Announcement: Live Chat Session on Tax-Exempt Journalism (UPDATED)</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 8 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 2 months</em> ago</span>  </div></li>
           <li class="views-row views-row-8 views-row-even views-row-last">  
   <div class="views-field views-field-title">        <span class="field-content"><a href="/blog/2014/new-approach-helping-journalism-non-profits-irs">A New Approach to Helping Journalism Non-Profits at the IRS</a></span>  </div>  
-  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">4 years 9 months</em> ago</span>  </div></li>
+  <div class="views-field views-field-created">        <span class="field-content"><em class="placeholder">5 years 2 months</em> ago</span>  </div></li>
       </ul></div>    </div>
   
   
@@ -272,7 +272,7 @@ Material on this website may link to independently run websites outside of the w
   </div></div></div></div>      <div id="primary-menu-bar" class="nav clearfix"><nav role="navigation" class="primary-menu-wrapper menu-wrapper clearfix"><h2 class="element-invisible">Main menu</h2><ul class="menu primary-menu clearfix"><li class="menu-275 first"><a href="/" title="Digital Media Law Project Home Page">Home</a></li><li class="menu-1223"><a href="/legal-guide">Legal Guide</a></li><li class="menu-356"><a href="/database" title="CMLP legal threats database">Threats Database</a></li><li class="menu-396"><a href="/research-response" title="">Research &amp; Response</a></li><li class="menu-47"><a href="/blog" title="">Blog</a></li><li class="menu-1222 last"><a href="/about-digital-media-law-project" title="">About</a></li></ul></nav></div>    </footer>
   </div>
 <div id="copyright">
-  <div class="text">Copyright 2007-18 Digital Media Law Project and respective authors. Except where otherwise noted,<br>content on this site is licensed under a Creative Commons Attribution-Noncommercial-ShareAlike 3.0 License: <a href="/faq/what-your-copyright-licensing-policy" class="lnk" target="_blank">Details.</a>
+  <div class="text">Copyright 2007-19 Digital Media Law Project and respective authors. Except where otherwise noted,<br>content on this site is licensed under a Creative Commons Attribution-Noncommercial-ShareAlike 3.0 License: <a href="/faq/what-your-copyright-licensing-policy" class="lnk" target="_blank">Details.</a>
     <br>Use of this site is pursuant to our <a href="/website-terms-use" class="lnk" target="_blank">Terms of Use</a> and <a href="/privacy-notice" class="lnk" target="_blank">Privacy Notice</a>.</div>
   <div class="cc"><a href="http://creativecommons.org/licenses/by-nc-sa/3.0/" target="_blank"><img src="/sites/dmlp.org/themes/cmlp/images/cc.gif" border="0" height="24" width="62"></a></div>
 </div>
